# service/src/main/java/br/com/sw2you/realmeet/controller/RoomController.java
@@ -3,6 +3,7 @@ package br.com.sw2you.realmeet.controller;
 import static java.util.concurrent.CompletableFuture.supplyAsync;
 
 import br.com.sw2you.realmeet.api.facade.RoomsApi;
+import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
 import br.com.sw2you.realmeet.api.model.RoomDTO;
 import br.com.sw2you.realmeet.service.RoomService;
 import br.com.sw2you.realmeet.util.ResponseEntityUtils;
@@ -26,5 +27,11 @@ public class RoomController implements RoomsApi {
         //return supplyAsync(() -> ResponseEntity.ok(roomService.getRoom(id)));
         //return supplyAsync(() -> roomService.getRoom(id), controllersExecutor).thenApply(r -> ResponseEntityUtils.ok(r));
         return supplyAsync(() -> roomService.getRoom(id), controllersExecutor).thenApply(ResponseEntityUtils::ok);
+    }
+
+    @Override
+    public CompletableFuture<ResponseEntity<RoomDTO>> createRoom(CreateRoomDTO createRoomDTO) {
+        return supplyAsync(() -> roomService.createRoom(createRoomDTO), controllersExecutor)
+            .thenApply(ResponseEntityUtils::created);
     }
 }
